--- a/src/main/java/gui/ToDoForm.form
+++ b/src/main/java/gui/ToDoForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.ToDoForm">
-  <grid id="27dc6" binding="todoPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="todoPanel" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="653" height="501"/>
@@ -12,75 +12,6 @@
     </properties>
     <border type="bevel-raised"/>
     <children>
-      <grid id="bc904" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="20" left="20" bottom="20" right="20"/>
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-9187370"/>
-        </properties>
-        <border type="bevel-raised"/>
-        <children>
-          <component id="f2b82" class="javax.swing.JButton" binding="shareButton" default-binding="true">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-14184705"/>
-              <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
-              <text value="Share "/>
-            </properties>
-          </component>
-          <component id="3ea8c" class="javax.swing.JButton" binding="changeShareButton" default-binding="true">
-            <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-14184705"/>
-              <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
-              <text value="Change Share"/>
-            </properties>
-          </component>
-          <component id="88e64" class="javax.swing.JComboBox" binding="members">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-1"/>
-              <font name="Elephant" size="14" style="0"/>
-              <foreground color="-16212568"/>
-              <model>
-                <item value="Members"/>
-              </model>
-            </properties>
-          </component>
-          <component id="1bce0" class="javax.swing.JButton" binding="buttonSave">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-14184705"/>
-              <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
-              <horizontalTextPosition value="0"/>
-              <text value="Save"/>
-            </properties>
-          </component>
-          <vspacer id="11f76">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-          <vspacer id="b7b66">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-        </children>
-      </grid>
       <grid id="a9a11" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="20" left="20" bottom="20" right="20"/>
         <constraints>
@@ -177,7 +108,7 @@
       </grid>
       <component id="59faf" class="javax.swing.JLabel" binding="image">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <maximum-size width="267" height="367"/>
           </grid>
         </constraints>
@@ -185,21 +116,80 @@
           <text value=""/>
         </properties>
       </component>
-      <scrollpane id="6e677">
+      <vspacer id="57654">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
-        <border type="none"/>
+      </vspacer>
+      <grid id="bc904" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="20" left="20" bottom="20" right="20"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9187370"/>
+        </properties>
+        <border type="bevel-raised"/>
         <children>
-          <grid id="cd867" binding="panelActivity" layout-manager="GridBagLayout">
-            <constraints/>
-            <properties/>
-            <border type="bevel-raised"/>
-            <children/>
-          </grid>
+          <component id="f2b82" class="javax.swing.JButton" binding="shareButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1114125"/>
+              <text value="Share "/>
+            </properties>
+          </component>
+          <component id="3ea8c" class="javax.swing.JButton" binding="changeShareButton" default-binding="true">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1"/>
+              <text value="Change Share"/>
+            </properties>
+          </component>
+          <component id="88e64" class="javax.swing.JComboBox" binding="members">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16212568"/>
+              <model>
+                <item value="Members"/>
+              </model>
+            </properties>
+          </component>
+          <component id="1bce0" class="javax.swing.JButton" binding="buttonSave">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-1"/>
+              <horizontalTextPosition value="0"/>
+              <text value="Save"/>
+            </properties>
+          </component>
+          <vspacer id="11f76">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <vspacer id="b7b66">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
         </children>
-      </scrollpane>
+      </grid>
     </children>
   </grid>
 </form>
