--- a/src/main/java/gui/ToDoForm.form
+++ b/src/main/java/gui/ToDoForm.form
@@ -6,19 +6,19 @@
       <xy x="20" y="20" width="653" height="501"/>
     </constraints>
     <properties>
-      <background color="-2513409"/>
+      <background color="-6231077"/>
       <minimumSize width="653" height="501"/>
       <preferredSize width="653" height="501"/>
     </properties>
     <border type="bevel-raised"/>
     <children>
-      <grid id="a9a11" binding="campo1" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a9a11" binding="campo1" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="20" left="20" bottom="20" right="20"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-5291777"/>
+          <background color="-9187370"/>
         </properties>
         <border type="bevel-raised"/>
         <children>
@@ -84,6 +84,7 @@
             </constraints>
             <properties>
               <background color="-1114125"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="99e93" class="javax.swing.JLabel">
@@ -106,6 +107,26 @@
               <background color="-1114125"/>
             </properties>
           </component>
+          <component id="6645c" class="javax.swing.JTextField" binding="statusField">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-1114125"/>
+            </properties>
+          </component>
+          <component id="cbe5c" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16777216"/>
+              <text value="Status:"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="59faf" class="javax.swing.JLabel" binding="image">
@@ -118,18 +139,13 @@
           <text value=""/>
         </properties>
       </component>
-      <vspacer id="57654">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <grid id="bc904" binding="campo2" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="20" left="20" bottom="20" right="20"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-5291777"/>
+          <background color="-9187370"/>
         </properties>
         <border type="bevel-raised"/>
         <children>
@@ -200,6 +216,22 @@
           </component>
         </children>
       </grid>
+      <scrollpane id="a878c">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="c9112" binding="panelActivity" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints/>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </grid>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
